apps/nextcloud/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: mydnschallenge
  routes:
    # TODO: 旧 compose は `yourdoamin` というプレースホルダのままだった。実ホスト名に変更すること。
    - match: Host(`nextcloud.example.com`)
      kind: Rule
      services:
        - name: nextcloud
          port: 80
